@@ -1,3 +1,7 @@
+/*
+ * Chr(36) + "Id" + Chr(36)
+ */
+
 #include "common.ch"
 /* VERY IMPORTANT: Don't use this querys as sample, they are used for stress tests !!! */
 
